# diversity

./: .coveragerc  .gitignore  LICENSE  PKG-INFO  README.md  __main__.py  bar_counts.tsv  baz_similarities.tsv  counts.tsv  diversities.tsv  diversity.py  foo_counts.tsv  josiah.py  log.py  maxent_general_fit_by_moment_rank.py  parameters.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  similarities.tsv  test_diversity.py  tox.ini  utilities.py
.github/workflows/: python-package.yml  tests.yml
Test/: diversity_test.py  utilities_test.py
legacy_code/: foo.py  read_input.py  shared_array.py
notebooks/: immunomics_fig3.ipynb  medical_imaging_fig6-7.ipynb  metagenomics_figs4-5.ipynb  pathology_fig8.ipynb
notebooks/fruits_and_animals/: S_2a.csv  S_2b.csv  counts_2a.csv  counts_2b.csv  counts_2b_1.csv  counts_2b_2.csv  counts_3.csv  counts_4.csv  counts_4a.csv  fruits_and_animals_fig1_2.ipynb
notebooks/immunomics/: immunomics_fig3.ipynb
notebooks/immunomics/Flu_Ig_complete_repertoires/: recon_input_SRR960281_hIgG_annotated.txt  recon_input_SRR960282_hIgG_annotated.txt  recon_input_SRR960283_hIgG_annotated.txt  recon_input_SRR960284_hIgG_annotated.txt  recon_input_SRR960285_hIgG_annotated.txt  recon_input_SRR960286_hIgG_annotated.txt  recon_input_SRR960287_hIgG_annotated.txt  recon_input_SRR960288_hIgG_annotated.txt  recon_input_SRR960289_hIgG_annotated.txt  recon_input_SRR960290_hIgG_annotated.txt  recon_input_SRR960291_hIgG_annotated.txt  recon_input_SRR960292_hIgG_annotated.txt  recon_input_SRR960293_hIgG_annotated.txt  recon_input_SRR960294_hIgG_annotated.txt  recon_input_SRR960295_hIgG_annotated.txt  recon_input_SRR960296_hIgG_annotated.txt  recon_input_SRR960297_hIgG_annotated.txt  recon_input_SRR960298_hIgG_annotated.txt  recon_input_SRR960299_hIgG_annotated.txt  recon_input_SRR960300_hIgG_annotated.txt  recon_input_SRR960301_hIgG_annotated.txt  recon_input_SRR960302_hIgG_annotated.txt  recon_input_SRR960303_hIgG_annotated.txt  recon_input_SRR960304_hIgG_annotated.txt  recon_input_SRR960305_hIgG_annotated.txt  recon_input_SRR960306_hIgG_annotated.txt  recon_input_SRR960307_hIgG_annotated.txt  recon_input_SRR960308_hIgG_annotated.txt  recon_input_SRR960309_hIgG_annotated.txt  recon_input_SRR960310_hIgG_annotated.txt  recon_input_SRR960311_hIgG_annotated.txt  recon_input_SRR960312_hIgG_annotated.txt  recon_input_SRR960313_hIgG_annotated.txt  recon_input_SRR960314_hIgG_annotated.txt  recon_input_SRR960315_hIgG_annotated.txt  recon_input_SRR960316_hIgG_annotated.txt  recon_input_SRR960317_hIgG_annotated.txt  recon_input_SRR960318_hIgG_annotated.txt  recon_input_SRR960319_hIgG_annotated.txt  recon_input_SRR960320_hIgG_annotated.txt  (+64 more)
notebooks/medical_imaging/: downscaled_arr_hash.pkl  medical_imaging_fig6-7.ipynb
notebooks/metagenomics/: metagenomics_figs4-5.ipynb
notebooks/pathology/: Lizas_reply.txt  Ramys_reply.txt  hundred_pairs.txt  pathology_fig8.ipynb
notebooks/pathology/pathology_outdir/: PathMNIST_Round0.csv  PathMNIST_Round1.csv  PathMNIST_Round2.csv  PathMNIST_Round3.csv  PathMNIST_Round4.csv  PathMNIST_Round5.csv  PathMNIST_Round6.csv  PathMNIST_Round7.csv  PathMNIST_Round8.csv  PathMNIST_Round9.csv
src/diversity/: __init__.py  __main__.py  abundance.py  components.py  diversity.py  exceptions.py  log.py  metacommunity.py  parameters.py  shared.py  similarity.py  utilities.py
src/greylock/: __init__.py  __main__.py  abundance.py  components.py  divergences.py  log.py  metacommunity.py  numpy.py  parameters.py  powermean.py  ray.py  similarity.py  torch.py  utilities.py
src/greylock/tests/: abundance_test.py  components_test.py  main_test.py  metacommunity_test.py  mockray.py  mockray_test.py  parameters_test.py  ray_test.py  similarity_test.py  temp.dont  utilities_test.py
src/greylock/tests/base_tests/: abundance_test.py  components_test.py  divergences_test.py  main_test.py  metacommunity_test.py  parameters_test.py  powermean_test.py
src/metacommunity_diversity/: __init__.py  __main__.py  abundance.py  components.py  metacommunity.py  parameters.py  utilities.py
src/metacommunity_diversity/tests/: abundance_test.py  components_test.py  metacommunity_test.py  parameters_test.py  similarity_test.py  utilities_test.py
tests/: abundance_test.py  components_test.py  conftest.py  diversity_test.py  main_test.py  metacommunity_test.py  parameters_test.py  shared_test.py  similarity_test.py  utilities_test.py
