[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greylock"
authors = [
    { name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" },
    { name = "Alex Morgan", email = "amorgan2@bidmc.harvard.edu" },
    { name = "Phuc Nguyen", email = "pnguye10@bidmc.harvard.edu" },
    { name = "Jasper Braun", email = "jasperbraun90@gmail.com" },
]
maintainers = [
    { name = "Alex Morgan", email = "amorgan2@bidmc.harvard.edu" },
]
version = "1.1.0"
description = "A Python package for measuring the composition of complex datasets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24.0", "pandas>=1.5.2", "scipy>=1.10.0"]

[project.optional-dependencies]
tests = ["pytest>=7.2.1", "pytest-cov>=3.0.0"]
lint = ["black>=24.3.0"]
ray = ["ray>=2.42.1"]

[project.urls]
"Homepage" = "https://github.com/ArnaoutLab/diversity"
"Bug Tracker" = "https://github.com/ArnaoutLab/diversity/issues"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 100"

[tool.coverage.run]
source = ["src"]
