[metadata]
name = diversity
version = 1.0.0
author = Elliot Hill, Jasper Braun
author_email = elliot.douglas.hill@gmail.com
description = Calculations of diversity with similarity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elliot-D-Hill//metacommunity
project_urls =
    Bug Tracker = https://github.com/Elliot-D-Hill/metacommunity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
