[metadata]
name = diversity
version = 1.0.0
author = Elliot Hill, Jasper Braun
author_email = elliot.douglas.hill@gmail.com
description = Calculations of similarity- and frequency-diversity sensitive diversity measures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elliot-D-Hill//diversity
project_urls =
    Bug Tracker = https://github.com/Elliot-D-Hill/diversity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires=
   pandas>=1.1.5
   numpy>=1.19.5
   ray>=2.1.0
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
